--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "ethers": "^6.7.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "qrcode.react": "1.0.0"
   },
   "scripts": {
     "start": "react-scripts start"
