--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
-    "qrcode.react": "1.0.0"
+    "qrcode.react": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start"
